# tkr-gpt-oss-20b

./: .coverage  .env  .env.example  .gitignore  AGENT_2B_COMPLETION_REPORT.md  AGENT_2B_DELIVERABLES.txt  AGENT_2B_HANDOFF_TO_3C.md  AGENT_2B_SUMMARY.md  AGENT_2B_VISUAL.txt  AGENT_3D_COMPLETION_REPORT.md  HARMONY_CONVERSATION_INTEGRATION.md  README.md  claude.local.md  conversation_harmony_flow.txt  demo_export.md  example_harmony_integration.py  pyproject.toml  requirements.txt  start  test_channel_filter.py  test_export.json  test_harmony_conversation.py
.chat_history/: demo_conversation.json  file.json  session.json  test_conv.json  test_save.json
benchmarks/: integration_benchmark.py  latency_benchmark.py
docs/: TROUBLESHOOTING.md  harmony_integration.md  migration_to_harmony.md
examples/: README.md  basic_integration.py  demo.py  export_demo.py  harmony_prompts.py  search_demo.py  simple_chat.py  stats_demo.py
examples/exported_conversations/: auto_detected.md  compact.json  no_metadata.md  sample_conversation.json  sample_conversation.txt
models/: .models
scripts/: validate_setup.py  validate_wave1.sh  validate_wave2.sh
scripts/alignment/: README.md  __init__.py  alignment_bypass.md  analysis.py  apply_steering.py  capture_activations.py  capture_all_activations.py  compute_vectors.py  generate_paired.py  generate_steered.py  prompts.py  steering_vector_fix.md  test_alignment.py  tester.py
src/: __init__.py  main.py
src/cli/: README.md  VALIDATION.md  __init__.py  commands.py  display.py  input.py  output.py  repl.py  requirements.txt
src/config/: __init__.py  cli_config.py  inference_config.py  model_config.py
src/conversation/: __init__.py  context.py  export.py  history.py  persistence.py  search.py  stats.py  tokens.py
src/inference/: __init__.py  batch.py  engine.py  optimization.py  recovery.py
src/models/: health.py  loader.py  memory.py  registry.py  switcher.py
src/prompts/: __init__.py  harmony.py  harmony_channels.py  harmony_native.py  presets.py  templates.py
src/sampling/: __init__.py
tests/: QUICK_REFERENCE.md  README.md  TESTING_INFRASTRUCTURE.md  WAVE2_SUMMARY.md  conftest.py
tests/integration/: test_config_to_model.py  test_conversation_to_cli.py  test_e2e_mock.py  test_e2e_workflow.py  test_harmony_generation.py  (+5 more)
(+53 files in other folders)
